--- a/Models/Instruments/combi/combi.ac
+++ b/Models/Instruments/combi/combi.ac
@@ -1,11 +1,11 @@
 AC3Db
 MATERIAL "DefaultWhite" rgb 1.0000 1.0000 1.0000  amb 0.2000 0.2000 0.2000  emis 0.0000 0.0000 0.0000  spec 0.5000 0.5000 0.5000  shi 10 trans 0.0000
-MATERIAL "combi" rgb 0.8000 0.8000 0.8000  amb 1.0000 1.0000 1.0000  emis 0.0000 0.0000 0.0000  spec 0.5000 0.5000 0.5000  shi 50 trans 0.0000
-MATERIAL "illum.001" rgb 0.9000 0.9000 0.9000  amb 1.0000 1.0000 1.0000  emis 0.0000 0.0000 0.0000  spec 0.1550 0.1550 0.1550  shi 50 trans 0.0000
-MATERIAL "DefaultWhite" rgb 1.0000 1.0000 1.0000  amb 0.2000 0.2000 0.2000  emis 0.0000 0.0000 0.0000  spec 0.0500 0.0500 0.0500  shi 50 trans 0.0000
+MATERIAL "combi" rgb 0.8000 0.8000 0.8000  amb 1.0000 1.0000 1.0000  emis 0.0000 0.0000 0.0000  spec 0.2500 0.2500 0.2500  shi 50 trans 0.0000
+MATERIAL "illum.001" rgb 0.9000 0.9000 0.9000  amb 1.0000 1.0000 1.0000  emis 0.0000 0.0000 0.0000  spec 0.0775 0.0775 0.0775  shi 50 trans 0.0000
+MATERIAL "DefaultWhite" rgb 1.0000 1.0000 1.0000  amb 0.2000 0.2000 0.2000  emis 0.0000 0.0000 0.0000  spec 0.0250 0.0250 0.0250  shi 50 trans 0.0000
 OBJECT world
 name "Blender_export__combi.ac"
-kids 62
+kids 64
 OBJECT poly
 name "abs-warning"
 loc 0.0061077 -0.0134101 0.0760666
@@ -4612,7 +4612,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-m-1"
-loc -0.0031417 0.0099160 -0.0711226
+loc -0.0031417 -0.0014327 -0.0711226
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4631,7 +4631,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-m-1.001"
-loc -0.0031417 -0.0015725 -0.0711226
+loc -0.0031417 0.0104186 -0.0711226
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4688,7 +4688,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-m-10"
-loc -0.0031417 0.0099160 -0.0633832
+loc -0.0031417 -0.0014327 -0.0633832
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4707,7 +4707,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-m-10.001"
-loc -0.0031417 -0.0015725 -0.0633832
+loc -0.0031417 0.0104186 -0.0633832
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4763,8 +4763,46 @@ refs 4
 1 0.091781 0.492187
 kids 0
 OBJECT poly
+name "t-m-minus.001"
+loc -0.0031417 0.0104186 -0.0552464
+texture "digits.png"
+texrep 1 1
+numvert 4
+0.0033414 -0.0130296 -0.0481842
+0.0033414 -0.0239379 -0.0481842
+0.0033414 -0.0239379 -0.0398236
+0.0033414 -0.0130296 -0.0398236
+numsurf 1
+SURF 0X0
+mat 2
+refs 4
+0 0.603899 0.484543
+3 0.511431 0.484543
+2 0.511431 0.001963
+1 0.603899 0.001963
+kids 0
+OBJECT poly
+name "t-m-plus.001"
+loc -0.0031417 0.0104186 -0.0552464
+texture "digits.png"
+texrep 1 1
+numvert 4
+0.0033414 -0.0130296 -0.0481842
+0.0033414 -0.0239379 -0.0481842
+0.0033414 -0.0239379 -0.0398236
+0.0033414 -0.0130296 -0.0398236
+numsurf 1
+SURF 0X0
+mat 2
+refs 4
+0 0.501849 0.484543
+3 0.409380 0.484543
+2 0.409380 0.001963
+1 0.501849 0.001963
+kids 0
+OBJECT poly
 name "t-s-01"
-loc -0.0031417 0.0099160 -0.0976330
+loc -0.0031417 -0.0014327 -0.0976330
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4783,7 +4821,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-s-01.001"
-loc -0.0031417 -0.0015725 -0.0976330
+loc -0.0031417 0.0104186 -0.0976330
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4840,7 +4878,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-s-1"
-loc -0.0031417 0.0099160 -0.0889402
+loc -0.0031417 -0.0014327 -0.0889402
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4859,7 +4897,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-s-1.001"
-loc -0.0031417 -0.0015725 -0.0889402
+loc -0.0031417 0.0104186 -0.0889402
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4916,7 +4954,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-s-10"
-loc -0.0031417 0.0099160 -0.0810583
+loc -0.0031417 -0.0014327 -0.0810583
 texture "digits.png"
 texrep 1 1
 numvert 4
@@ -4935,7 +4973,7 @@ refs 4
 kids 0
 OBJECT poly
 name "t-s-10.001"
-loc -0.0031417 -0.0015725 -0.0810583
+loc -0.0031417 0.0104186 -0.0810583
 texture "digits.png"
 texrep 1 1
 numvert 4
